<resources>
    <string name="app_name">TEApp</string>
    <string name="abc">Abecedario</string>
    <string name="colores">Colores</string>
    <string name="senales">Señales</string>
    <string name="comunicacion">Comunicación</string>
    <string name="rojo">Rojo</string>
    <string name="naranja">Naranja</string>
    <string name="amarillo">Amarillo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="morado">Morado</string>
    <string name="letraa">Letra "A"</string>
    <string name="letrab">Letra "B"</string>
    <string name="letrac">Letra "C"</string>
    <string name="letrad">Letra "D"</string>
    <string name="letrae">Letra "E"</string>
    <string name="letraf">Letra "F"</string>
    <string name="letrag">Letra "G"</string>
    <string name="letrah">Letra "H"</string>
    <string name="letrai">Letra "I"</string>
    <string name="letraj">Letra "J"</string>
    <string name="letrak">Letra "K"</string>
    <string name="letral">Letra "L"</string>
    <string name="letram">Letra "M"</string>
    <string name="letran">Letra "N"</string>
    <string name="letrann">Letra "Ñ"</string>
    <string name="letrao">Letra "O"</string>
    <string name="letrap">Letra "P"</string>
    <string name="letraq">Letra "Q"</string>
    <string name="letrar">Letra "R"</string>
    <string name="letras">Letra "S"</string>
    <string name="letrat">Letra "T"</string>
    <string name="letrau">Letra "U"</string>
    <string name="letrav">Letra "V"</string>
    <string name="letraw">Letra "W"</string>
    <string name="letrax">Letra "X"</string>
    <string name="letray">Letra "Y"</string>
    <string name="letraz">Letra "Z"</string>
    <string name="opciones">Opciones</string>
    <string name="cuenta">Cuenta</string>
    <string name="avion">vión</string>
    <string name="arbol">rbol</string>
    <string name="agua">gua</string>
    <string name="aguacate">guacate</string>
    <string name="ardilla">rdilla</string>
    <string name="alberca">lberca</string>
    <string name="botella">otella</string>
    <string name="barco">arco</string>
    <string name="burro">urro</string>
    <string name="brincar">rincar</string>
    <string name="balon">alón</string>
    <string name="boca">oca</string>
    <string name="caballo">aballo</string>
    <string name="carro">arro</string>
    <string name="cabeza">abeza</string>
    <string name="casa">asa</string>
    <string name="camisa">amisa</string>
    <string name="conejo">onejo</string>
    <string name="dado">ado</string>
    <string name="durazno">urazno</string>
    <string name="dedos">edos</string>
    <string name="dona">ona</string>
    <string name="dinos">inosaurio</string>
    <string name="dientes">ientes</string>
    <string name="espejo">spejo</string>
    <string name="elote">lote</string>
    <string name="elefante">lefante</string>
    <string name="escoba">scoba</string>
    <string name="estrella">strella</string>
    <string name="escalera">scalera</string>
    <string name="fresa">resa</string>
    <string name="foco">oco</string>
    <string name="frambuesa">rambuesa</string>
    <string name="flamenco">lamenco</string>
    <string name="foto">oto</string>
    <string name="foca">oca</string>
    <string name="gato">ato</string>
    <string name="goma">oma</string>
    <string name="gracias">racias</string>
    <string name="gris">ris</string>
    <string name="guante">uante</string>
    <string name="guitarra">uitarra</string>
    <string name="hormiga">ormiga</string>
    <string name="hielo">ielo</string>
    <string name="higo">igo</string>
    <string name="hongo">ongo</string>
    <string name="hipopotamo">ipopótamo</string>
    <string name="huevo">uevo</string>
    <string name="iglesia">glesia</string>
    <string name="iguana">guana</string>
    <string name="insecto">nsecto</string>
    <string name="internet">nternet</string>
    <string name="iman">mán</string>
    <string name="isla">sla</string>
    <string name="juguete">uguete</string>
    <string name="jarra">arra</string>
    <string name="jirafa">irafa</string>
    <string name="jamaica">amaica</string>
    <string name="jazmin">azmín</string>
    <string name="joya">oya</string>
    <string name="kilo">ilo</string>
    <string name="kiwi">iwi</string>
    <string name="kilometro">ilometro</string>
    <string name="koala">oala</string>
    <string name="karate">arate</string>
    <string name="ketchup">etchup</string>
    <string name="luna">una</string>
    <string name="leon">eón</string>
    <string name="leche">eche</string>
    <string name="limon">imón</string>
    <string name="lagartija">agartija</string>
    <string name="leopardo">eopardo</string>
    <string name="manzana">anzana</string>
    <string name="mesa">esa</string>
    <string name="mariposa">ariposa</string>
    <string name="mosca">osca</string>
    <string name="mamut">amut</string>
    <string name="melon">elón</string>
    <string name="nariz">ariz</string>
    <string name="palabra_naranja">aranja</string>
    <string name="negro">egro</string>
    <string name="nido">ido</string>
    <string name="nino">iño</string>
    <string name="noche">oche</string>
    <string name="name">ame</string>
    <string name="nandu">andu</string>
    <string name="nono">ono</string>
    <string name="nu">u</string>
    <string name="oso">so</string>
    <string name="oscar">scar</string>
    <string name="oruga">ruga</string>
    <string name="ocho">cho</string>
    <string name="ojo">jo</string>
    <string name="orquidea">rquídea</string>
    <string name="platano">látano</string>
    <string name="pato">ato</string>
    <string name="pinocho">inocho</string>
    <string name="planta">lanta</string>
    <string name="pantalon">antalón</string>
    <string name="pluma">luma</string>
    <string name="queso">queso</string>
    <string name="quimica">uímica</string>
    <string name="quesadilla">uesadilla</string>
    <string name="quincianera">uinceañera</string>
    <string name="quebrar">uebrar</string>
    <string name="quemar">uemar</string>
    <string name="raton">atón</string>
    <string name="rosa">osa</string>
    <string name="palabra_rojo">ojo</string>
    <string name="rayo">ayo</string>
    <string name="rimel">imel</string>
    <string name="rompecabezas">ompecabezas</string>
    <string name="serpiente">serpiente</string>
    <string name="sol">ol</string>
    <string name="salmon">almón</string>
    <string name="soldado">oldado</string>
    <string name="sirena">irena</string>
    <string name="senora">eñora</string>
    <string name="tamarindo">amarindo</string>
    <string name="tornillo">ornillo</string>
    <string name="tortuga">ortuga</string>
    <string name="trompeta">rompeta</string>
    <string name="tijeras">ijeras</string>
    <string name="toro">oro</string>
    <string name="uva">va</string>
    <string name="unguento">ngüento</string>
    <string name="utiles">tiles</string>
    <string name="ukelele">kelele</string>
    <string name="una">ña</string>
    <string name="unicornio">nicornio</string>
    <string name="venado">enado</string>
    <string name="violeta">ioleta</string>
    <string name="palabra_verde">erde</string>
    <string name="vibora">íbora</string>
    <string name="violin">iolín</string>
    <string name="vaso">aso</string>
    <string name="winni">inni</string>
    <string name="walmart">almart</string>
    <string name="waffle">affle</string>
    <string name="wifi">i-fi</string>
    <string name="whisky">hisky</string>
    <string name="wendy">endy</string>
    <string name="xilofono">ilófono</string>
    <string name="xochitl">ochitl</string>
    <string name="xochimilco">ochimilco</string>
    <string name="xoloitzcuintle">oloitzcuintle</string>
    <string name="ximena">imena</string>
    <string name="xbox">box</string>
    <string name="yegua">egua</string>
    <string name="yoyo">oyo</string>
    <string name="yucatan">ucatán</string>
    <string name="yate">ate</string>
    <string name="yogurt">ogurt</string>
    <string name="yeso">eso</string>
    <string name="zorro">orro</string>
    <string name="zapote">apote</string>
    <string name="zombi">ombi</string>
    <string name="zapato">apato</string>
    <string name="zanahoria">anahoria</string>
    <string name="zopilote">opilote</string>
    <string name="rojo_manzana">Manzana</string>
    <string name="rojo_tomate">Tomate</string>
    <string name="rojo_corazon">Corazón</string>
    <string name="rojo_fresa">Fresa</string>
    <string name="naranja_zanahoria">Zanahoria</string>
    <string name="naranja_zorro">Zorro</string>
    <string name="naranja_carro">Carro</string>
    <string name="amarillo_sol">Sol</string>
    <string name="amarillo_pato">Pato</string>
    <string name="amarillo_platano">Platano</string>
    <string name="amarillo_minion">Minion</string>
    <string name="verde_rana">Rana</string>
    <string name="verde_brocoli">Brocoli</string>
    <string name="verde_aguacate">Aguacate</string>
    <string name="verde_tortuga">Tortuga</string>
    <string name="azul_tiburon">Tiburon</string>
    <string name="azul_nube">Nube</string>
    <string name="azul_agua">Agua</string>
    <string name="azul_ballena">Ballena</string>
    <string name="morado_uva">Uva</string>
    <string name="morado_globo">Globo</string>
    <string name="morado_mono">Moño</string>
    <string name="morado_pulpo">Pulpo</string>
    <string name="nina_comida">La niña come su comida</string>
    <string name="nino_despertando">El niño esta despertando</string>
    <string name="nino_durmiendo">El niño esta durmiendo</string>
    <string name="ninos_dientes">El niño cepilla sus dientes</string>
    <string name="ninos_tomando">Los niños estan tomando agua</string>
    <string name="nino_corriendo">Los niños corren</string>
    <string name="cortadura_nino">Te cortas si tocas objetos filosos</string>
    <string name="cortando_pan">No acercarse a objetos filosos</string>
    <string name="cuidado_fuego">No acercarse a la estufa</string>
    <string name="no_alberca">No acercarse a la alberca solo</string>
    <string name="nino_ahogandose">Si te caes a la alberca te ahogas</string>
    <string name="cuidado_quemadura">Te quemas si te acercas a la estufa</string>
    <string name="no_enchufes">No tocar los enchufes de la luz</string>
    <string name="si_electrocutas">Si tocas los enchufes de la luz te electrocutas</string>
    <string name="nombre_user">Nombre usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="passworddos">Confirmar contraseña:</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar">iniciar sesión</string>
    <string name="menu">Menu</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="salir">Salir</string>
</resources>