<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_rojo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_red"
                android:onClick="Colores"
                android:text="@string/rojo"
                android:textSize="96sp" />

            <Button
                android:id="@+id/button_naranja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_orange"
                android:onClick="Colores"
                android:text="@string/naranja"
                android:textSize="96sp" />

            <Button
                android:id="@+id/button_amarillo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_yellow"
                android:onClick="Colores"
                android:text="@string/amarillo"
                android:textSize="96sp" />

            <Button
                android:id="@+id/button_verde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_green"
                android:onClick="Colores"
                android:text="@string/verde"
                android:textSize="96sp" />

            <Button
                android:id="@+id/button_azul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_blue"
                android:onClick="Colores"
                android:text="@string/azul"
                android:textSize="96sp" />

            <Button
                android:id="@+id/button_morado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:onClick="Colores"
                android:text="@string/morado"
                android:textSize="96sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>