<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cuenta"
        android:textSize="48sp" />
    <EditText
        android:id="@+id/EditUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Usuario"
        android:enabled="false"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Nombre"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/EditUserApe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Apellido"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/Editar_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:backgroundTint="@color/light_blue"
        android:text="@string/editar"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Cancelar_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:backgroundTint="@color/light_red"
        android:text="@string/cancelar"
        android:textSize="48sp"
        android:textStyle="bold" />

</LinearLayout>