<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".AmarilloActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/amarillo"
                android:textSize="60sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/Opc1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="Sonido_amarillo">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="257dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_vertical"
                        android:text="@string/amarillo_sol"
                        android:textSize="48sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/sol" />
                </TableRow>

                <TableRow
                    android:id="@+id/Opc2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="Sonido_amarillo">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="279dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_vertical"
                        android:text="@string/amarillo_pato"
                        android:textSize="48sp" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/pato" />
                </TableRow>

                <TableRow
                    android:id="@+id/Opc3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="Sonido_amarillo">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="276dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_vertical"
                        android:text="@string/amarillo_minion"
                        android:textSize="48sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/minion" />
                </TableRow>

                <TableRow
                    android:id="@+id/Opc4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="Sonido_amarillo">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="249dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_vertical"
                        android:text="@string/amarillo_platano"
                        android:textSize="48sp" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/platano" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>